--- a/Vote/index.html
+++ b/Vote/index.html
@@ -81,6 +81,8 @@ http://www.tooplate.com/view/2024-vertiwood
 
                           <label for="email">Last Name:</label><br><input type="text" id="prenom" name="email" class="validate-email required input_field" />
                           <div class="cleaner h10"></div>
+                          <label for="text">Adress:</label><br><input type="text" id="adress" name="email" class="validate-email required input_field" />
+                          <div class="cleaner h10"></div>
 
                           <label for="text">Email:</label><br><input type="text" id="mail" name="email" class="validate-email required input_field" />
                           <div class="cleaner h10"></div>
