--- a/Vote/index.html
+++ b/Vote/index.html
@@ -76,10 +76,10 @@ http://www.tooplate.com/view/2024-vertiwood
                           <h2>Create new accout</h2>
                       <form method="post" name="compte" action="#">
 
-                          <label for="author2">First Name:</label><br><input type="text" id="nom" name="author" class="required input_field" />
+                          <label for="nom">First Name:</label><br><input type="text" id="nom" name="author" class="required input_field" />
                           <div class="cleaner h10"></div>
 
-                          <label for="email">Last Name:</label><br><input type="text" id="prenom" name="email" class="validate-email required input_field" />
+                          <label for="Lname">Last Name:</label><br><input type="text" id="prenom" name="email" class="validate-email required input_field" />
                           <div class="cleaner h10"></div>
                           <label for="text">Adress:</label><br><input type="text" id="adress" name="email" class="validate-email required input_field" />
                           <div class="cleaner h10"></div>
