--- a/Vote/index.html
+++ b/Vote/index.html
@@ -79,17 +79,17 @@ http://www.tooplate.com/view/2024-vertiwood
                           <label for="nom">First Name:</label><br><input type="text" id="nom" name="author" class="required input_field" />
                           <div class="cleaner h10"></div>
 
-                          <label for="Lname">Last Name:</label><br><input type="text" id="prenom" name="email" class="validate-email required input_field" />
+                          <label for="prenom">Last Name:</label><br><input type="text" id="prenom" name="email" class="validate-email required input_field" />
                           <div class="cleaner h10"></div>
-                          <label for="text">Adress:</label><br><input type="text" id="adress" name="email" class="validate-email required input_field" />
-                          <div class="cleaner h10"></div>
-
-                          <label for="text">Email:</label><br><input type="text" id="mail" name="email" class="validate-email required input_field" />
+                          <label for="adress">Adress:</label><br><input type="text" id="adress" name="email" class="validate-email required input_field" />
                           <div class="cleaner h10"></div>
 
-                          <label for="text">ID card:</label><br><input type="text" id="motp" name="email" class="validate-email required input_field" />
+                          <label for="mail">Email:</label><br><input type="text" id="mail" name="email" class="validate-email required input_field" />
                           <div class="cleaner h10"></div>
-                          <label for="text">Password:</label><br><input type="text" id="motp" name="email" class="validate-email required input_field" />
+
+                          <label for="ID">ID card:</label><br><input type="text" id="ID" name="email" class="validate-email required input_field" />
+                          <div class="cleaner h10"></div>
+                          <label for="motp">Password:</label><br><input type="text" id="motp" name="email" class="validate-email required input_field" />
                           <div class="cleaner h10"></div>
                           <input type="submit" class="submit_btn float_l" name="submit" id="submit1" value="Save" />
 
@@ -104,10 +104,10 @@ http://www.tooplate.com/view/2024-vertiwood
 
                           <form method="post" name="Accueil" action="#">
 
-                              <label for="author2">Login:</label><br><input type="text" id="login" name="author" class="required input_field" />
+                              <label for="login">Login:</label><br><input type="text" id="login" name="author" class="required input_field" />
                               <div class="cleaner h10"></div>
 
-                              <label for="email">Password:</label><br><input type="text" id="psw" name="email" class="validate-email required input_field" />
+                              <label for="psw">Password:</label><br><input type="text" id="psw" name="email" class="validate-email required input_field" />
                               <div class="cleaner h10"></div>
 
 
