--- a/Vote/index.html
+++ b/Vote/index.html
@@ -73,25 +73,25 @@ http://www.tooplate.com/view/2024-vertiwood
 
 
 
-                          <h2>Create new accout</h2>
-                      <form method="post" name="compte" action="#">
+                          <h2>Create new account</h2>
+                      <form method="post" name="compte" action="content.php">
 
-                          <label for="nom">First Name:</label><br><input type="text" id="nom" name="author" class="required input_field" />
-                          <div class="cleaner h10"></div>
-
-                          <label for="prenom">Last Name:</label><br><input type="text" id="prenom" name="email" class="validate-email required input_field" />
-                          <div class="cleaner h10"></div>
-                          <label for="adress">Adress:</label><br><input type="text" id="adress" name="email" class="validate-email required input_field" />
+                          <label for="nom">First Name:</label><br><input type="text" id="nom" name="fname" class="required input_field" />
                           <div class="cleaner h10"></div>
 
-                          <label for="mail">Email:</label><br><input type="text" id="mail" name="email" class="validate-email required input_field" />
+                          <label for="prenom">Last Name:</label><br><input type="text" id="prenom" name="lname" class="validate-email required input_field" />
+                          <div class="cleaner h10"></div>
+                          <label for="adress">Adress:</label><br><input type="text" id="adress" name="adress" class="validate-email required input_field" />
                           <div class="cleaner h10"></div>
 
-                          <label for="ID">ID card:</label><br><input type="text" id="ID" name="email" class="validate-email required input_field" />
+                          <label for="mail">Email:</label><br><input type="text" id="mail" name="mail" class="validate-email required input_field" />
                           <div class="cleaner h10"></div>
-                          <label for="motp">Password:</label><br><input type="text" id="motp" name="email" class="validate-email required input_field" />
+
+                          <label for="ID">ID card:</label><br><input type="text" id="ID" name="cin" class="validate-email required input_field" />
                           <div class="cleaner h10"></div>
-                          <input type="submit" class="submit_btn float_l" name="submit" id="submit1" value="Save" />
+                          <label for="motp">Password:</label><br><input type="text" id="motp" name="motp" class="validate-email required input_field" />
+                          <div class="cleaner h10"></div>
+                          <input type="submit" class="submit_btn float_l" name="submit" id="submit1" value="register" />
 
 
                       </form>
